force-app/main/default/objects/ReturnsAndCredit__c/ReturnsAndCredit__c.object-meta.xml
<CustomObject>
    <label>Returns And Credit</label>
    <nameField>
        <displayFormat>RC-{YYYY}{MM}{DD}{00000}</displayFormat>
        <label>Return No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Returns And Credit</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>