force-app/main/default/objects/ReturnsAndCredit__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Returns And Credit</relationshipLabel>
    <relationshipName>ReturnsAndCredit</relationshipName>
    <type>Lookup</type>
</CustomField>