force-app/main/default/objects/ReturnsAndCredit__c/fields/IsAllPaperworkInOrder__c.field-meta.xml
<CustomField>
    <fullName>IsAllPaperworkInOrder__c</fullName>
    <label>Is All Paperwork In Order</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>