force-app/main/default/objects/ReturnsAndCredit__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <filterItems>
            <field>$User.Country</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <filterItems>
            <field>$User.Sales_Region__c</field>
            <operation>equals</operation>
            <valueField>Product__c.sales_region__c</valueField>
        </filterItems>
        <filterItems>
            <field>$Profile.ManageUsers</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Returns And Credit</relationshipLabel>
    <relationshipName>Returns_And_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>