force-app/main/default/objects/ReturnsAndCredit__c/fields/PromoterDailyReport__c.field-meta.xml
<CustomField>
    <fullName>PromoterDailyReport__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Promoter Daily Report</label>
    <referenceTo>Promoter_Daily_Report__c</referenceTo>
    <relationshipLabel>Returns And Credit</relationshipLabel>
    <relationshipName>Returns_And_Credit</relationshipName>
    <type>Lookup</type>
</CustomField>