force-app/main/default/objects/ReturnsAndCredit__c/fields/ProvideCreditNumber__c.field-meta.xml
<CustomField>
    <fullName>ProvideCreditNumber__c</fullName>
    <label>Provide  Credit Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>