force-app/main/default/objects/ReturnsAndCredit__c/fields/ProvideJobNumber__c.field-meta.xml
<CustomField>
    <fullName>ProvideJobNumber__c</fullName>
    <label>Provide Job Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>