force-app/main/default/objects/ReturnsAndCredit__c/fields/ReturnedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ReturnedQuantity__c</fullName>
    <label>Returned Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>