force-app/main/default/objects/ReturnsAndCredit__c/fields/UserFeedbackSources__c.field-meta.xml
<CustomField>
    <fullName>UserFeedbackSources__c</fullName>
    <label>User Feedback Sources</label>
    <length>255</length>
    <type>Text</type>
</CustomField>