force-app/main/default/objects/ReturnsAndCredit__c/fields/WhatPaperworkIsMissing__c.field-meta.xml
<CustomField>
    <fullName>WhatPaperworkIsMissing__c</fullName>
    <label>What Paperwork Is Missing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>